# NeuralShield

./: .gitignore  02-bytes-to-unicode.md  AGENTS.md  README.md  REFACTOR_INCONSISTENCIES.md  pyproject.toml  requirements.txt
.cursor/rules/: THERULE.mdc  behaviours.mdc  context.mdc  run-alias.mdc  workflow.mdc
docs/: Entrega.aux  Entrega.bcf  Entrega.fdb_latexmk  Entrega.fls  REPOSITORY_OVERVIEW.md
docs/Entrega/: Entrega.fdb_latexmk  Entrega.fls  Entrega.out  Entrega.run.xml  Entrega.tex  Entrega.toc
docs/TemplateFing/: TemplateFing.fdb_latexmk  TemplateFing.fls  TemplateFing.tex
experiments/: CONSOLIDATED_RESULTS.md  DATASET_NAMING.md  FINAL_RESULTS.md  README.md
experiments/01_tfidf_preprocessing_comparison/: analyze_training_scores.py  comparison_summary.txt  final_analysis.md  generate_test_embeddings.py  test_multiple_contaminations.sh
experiments/02_dense_embeddings_comparison/: EXPERIMENT_PLAN.md  README.md  RUN_EXPERIMENT.md  analyze_scores.py  hyperparameter_search.py
experiments/03_secbert_comparison/: EXPERIMENT_PLAN.md  README.md  SECBERT_MAHALANOBIS_RESULTS.md  convert_jsonl_to_npz.py
experiments/04_colbert_muvera_comparison/: EXPERIMENT_PLAN.md  README.md  run_full_experiment.py
experiments/05_byt5_comparison/: EXPERIMENT_PLAN.md  README.md
experiments/06_mahalanobis_comparison/: README.md  RESULTS.md  test_mahalanobis.py  test_mahalanobis_gpu.py
experiments/07_ocsvm_comparison/: COLAB_SETUP.md  README.md  hyperparameter_search.py  test_ocsvm_cuml.py  visualize_search.py
experiments/08_secbert_srbh/: EXPERIMENT_PLAN.md  README.md  RUN_EXPERIMENT.md  run_parallel.sh
experiments/17_gmm_secbert/: RUN.md  (+5 more)
preprocessing/: ⛮ Pre-Processing.md
(+518 files in other folders)
