[project]
name = "neuralshield"
version = "0.1.0"
description = "NeuralShield is a WAF enhanced with Macchine Learning to detect and block threats."
readme = "README.md"
authors = [
    { name = "Joaquin Campo", email = "jcamponario@gmail.com" },
    { name = "Mateo Daneri", email = "matedaneri@gmail.com" },
]
requires-python = ">=3.12"

dependencies = [
    "fastembed>=0.7.3",
    "idna>=3.10",
    "loguru>=0.7.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pytest>=8.4.2",
    "typer>=0.19.2",
    "wandb>=0.22.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/neuralshield"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

line-length = 88
indent-width = 4

target-version = "py310"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff.lint]
select = ["F", "I", "E", "W", "ARG", "T201"]
fixable = ["I"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E712", "ARG001"]
"research/*.py" = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true



[[tool.mypy.overrides]]
module = ["torch.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
